tests/overloadedrecflds/should_fail/T14953.hs
{-# LANGUAGE DuplicateRecordFields #-}
module T14953 (module T14953_A, module T14953_B) where
import T14953_A
import T14953_B
